# parse_elf

./: .gitignore  CMakeLists.txt  README.md  buildall
.cache/clangd/index/: dev_elf.h.A15283B09D5C7B5B.idx  header_prints.c.89C1732724DA2D29.idx  linked_list.c.0D63AF0451D97603.idx  parse_elf.c.AC7D79F4CBBDFEA5.idx
.github/workflows/: parse_elf.yaml
include/: dev_elf.h  parse_elf.h
src/: header_prints.c  linked_list.c  parse_elf.c  parse_elf_api.c  parse_elf_prints.c
tests/: hello_world_test
